# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import commandsRouter from "./commands";
+import cellsRouter from "./cells";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(commandsRouter);
+router.use(cellsRouter);
 
 export default router;
